--- a/WpfTestdotNetFW/WebViewControlComponent.xaml
+++ b/WpfTestdotNetFW/WebViewControlComponent.xaml
@@ -9,13 +9,17 @@
              xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Name="rowView" Height="Auto"></RowDefinition>
+            <RowDefinition Name="rowView0" Height="Auto"></RowDefinition>
+            <RowDefinition Name="rowView1" Height="Auto"></RowDefinition>
             <RowDefinition Height="5"></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <Button Content="Tst" Grid.Row="2" Panel.ZIndex="100" Width="30" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Click="Button_Click"></Button>
-        <wv2:WebView2CompositionControl Grid.Row="0" Visibility="Visible" MinHeight="1" Panel.ZIndex="99" Name="webView" Loaded="webView_Loaded" />
-        <GridSplitter Name="gSplitter" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></GridSplitter>
-        <wv2:WebView2CompositionControl Grid.Row="2" Visibility="Collapsed" Panel.ZIndex="99" Name="webView2" Loaded="webView2_Loaded" />
+        <StackPanel Orientation="Horizontal">
+            <Button Content="Focus" Grid.Row="0" Panel.ZIndex="100" Width="50" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Click="Button_Click"></Button>
+            <Button Content="Blur" Name="btnBlur" Grid.Row="0" Panel.ZIndex="100" Width="50" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Click="btnBlur_Click"></Button>
+        </StackPanel>
+        <wv2:WebView2CompositionControl Grid.Row="1" Visibility="Visible" MinHeight="1" Panel.ZIndex="99" Name="webView" Loaded="webView_Loaded" GotFocus="webView_GotFocus" GotKeyboardFocus="webView_GotKeyboardFocus" LostFocus="webView_LostFocus" LostKeyboardFocus="webView_LostKeyboardFocus" />
+        <GridSplitter Name="gSplitter" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"></GridSplitter>
+        <wv2:WebView2CompositionControl Grid.Row="3" Visibility="Visible" MinHeight="1" Panel.ZIndex="99" Name="webView2" Loaded="webView2_Loaded" GotFocus="webView2_GotFocus" GotKeyboardFocus="webView2_GotKeyboardFocus" LostFocus="webView2_LostFocus" LostKeyboardFocus="webView2_LostKeyboardFocus" />
     </Grid>
 </UserControl>
